Define an alias for ratio and phase tap changer associated to an unspecified end
Signed-off-by: Romain Courtier <romain.courtier@rte-france.com>